force-app/main/default/objects/KT_Signature_Audit__c/KT_Signature_Audit__c.object-meta.xml
<CustomObject>
    <description>Immutable B4 e-signature audit record. Created for every signature workflow event and protected from update/delete through package permissions.</description>
    <label>KT Signature Audit</label>
    <nameField>
        <displayFormat>SAUD-{000000}</displayFormat>
        <label>Signature Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT Signature Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>