force-app/main/default/objects/KT_Signature_Audit__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <description>UTC timestamp of the event. Set by system automation and not intended for user edit.</description>
    <label>Event Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>