force-app/main/default/objects/KT_Signature_Audit__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Type of signature audit event.</description>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Invitation Sent</fullName><default>false</default><label>Invitation Sent</label></value>
            <value><fullName>Document Viewed</fullName><default>false</default><label>Document Viewed</label></value>
            <value><fullName>Signature Captured</fullName><default>true</default><label>Signature Captured</label></value>
            <value><fullName>Signed</fullName><default>false</default><label>Signed</label></value>
            <value><fullName>Delegated</fullName><default>false</default><label>Delegated</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>