force-app/main/default/objects/KT_Signature_Audit__c/fields/Geolocation_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Latitude__c</fullName>
    <description>Latitude if geolocation was permitted.</description>
    <label>Geolocation Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>