force-app/main/default/objects/KT_Signature_Audit__c/fields/Geolocation_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Longitude__c</fullName>
    <description>Longitude if geolocation was permitted.</description>
    <label>Geolocation Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>