force-app/main/default/objects/KT_Signature_Audit__c/fields/Hash_Value__c.field-meta.xml
<CustomField>
    <fullName>Hash_Value__c</fullName>
    <description>SHA-256 hash of document content, signer email, and UTC timestamp for tamper detection.</description>
    <label>Hash Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>