force-app/main/default/objects/KT_Signature_Audit__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IP address captured at event time.</description>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>