force-app/main/default/objects/KT_Signature_Audit__c/fields/KT_Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>KT_Signature_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Signature workflow this audit event relates to.</description>
    <label>KT Signature Request</label>
    <referenceTo>KT_Signature_Request__c</referenceTo>
    <relationshipLabel>Signature Audits</relationshipLabel>
    <relationshipName>SignatureAudits</relationshipName>
    <type>Lookup</type>
</CustomField>