force-app/main/default/objects/KT_Signature_Audit__c/fields/KT_Signer__c.field-meta.xml
<CustomField>
    <fullName>KT_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Signer record this audit event relates to.</description>
    <label>KT Signer</label>
    <referenceTo>KT_Signer__c</referenceTo>
    <relationshipLabel>Signature Audits</relationshipLabel>
    <relationshipName>SignatureAudits</relationshipName>
    <type>Lookup</type>
</CustomField>