force-app/main/default/objects/KT_Signature_Audit__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <description>One-time signing session token used for this event and invalidated post-signature.</description>
    <label>Session Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>